[package]
name = "pwdgen"
version = "0.1.1"
authors = ["Jesse Stricker"]
edition = "2021"
# keep MSRV in sync with /.github/workflows/rust-check.yml
rust-version = "1.60.0"
description = "A simple password generator for the command line."
license = "Apache-2.0"
publish = false

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
rand = "0.8.5"
